Adds apiResponse helper
